--- a/TCP/Handler/wwwroot/index.html
+++ b/TCP/Handler/wwwroot/index.html
@@ -6,8 +6,12 @@
     <title>首页</title>
 </head>
 <body>
-    <li> go</li>
-    <li> julia</li>
-    <li> python</li>
+    <form action="http://localhost:8080/process" method="POST" 
+    enctype="multipart/form-data">
+        <input type="text" name="first_name" placeholder="bian"/>
+        <input type="text" name="second_name" placeholder="xinxing"/>
+        <input type="file" name="upload"/>
+        <button type="submit"/>Submit</button>
+    </form>
 </body>
 </html>
